# python-project-lvl2

./: .coverage  .gitignore  Makefile  README.md  cc-test-reporter  coverage.xml  gendiff.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  run_lint.yml  test.yml
gendiff/: .coverage  __init__.py  cli.py  create_tree_diff.py  gendiff.py  getters.py  open_file.py  parse_data.py  tree.py
gendiff/formaters/: choise_formater.py  json.py  plain.py  stylish.py
gendiff/scripts/: .coverage  gendiff.py  getters.py  new_diff.py  parse_data.py  test.py
gendiff/scripts/formaters/: json.py  plain.py  stylish.py
gendiff/tests/: test_gendiff.py
gendiff_/scripts/: gendiff.py  getters.py
gendiff_/scripts/formaters/: plain.py  stylish.py
tests/: conftest.py  test_gendiff.py  test_generate_diff.py  test_json.py  test_plain.py  test_stylish.py
tests/fixtures/: jsontree
