[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["tyranich <63128958+tyranich@users.noreply.github.com>"]
license = "MIT"
packages = [
    { include = "gendiff"},
]
[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.2"
coverage = "^6.3.2"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.gendiff:main"
